# ros-python-starter

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  apply_configuration.py  config.json  package.xml  pyproject.toml
.github/workflows/: ci.yml
config/: example.yaml
launch/: example.launch
scripts/: example_node  example_pub
src/: test_ros_node.py
tests/: example_ros_test.test
